--- a/fly.toml
+++ b/fly.toml
@@ -15,3 +15,6 @@ primary_region = "dfw"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[deploy]
+  release_command = "npm run migrate up"
