--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for morning-darkness-5072 on 2023-08-01T18:06:46-05:00
+# fly.toml app configuration file generated for long-leaf-2351 on 2023-08-01T19:37:08-05:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "morning-darkness-5072"
+app = "long-leaf-2351"
 primary_region = "dfw"
 
 [build]
